<resources>
    <string name="app_name">Heatwave Risk Notifier</string>
    <string name="not_at_risk">Not at risk</string>
    <string name="check_button">Check</string>
    <string name="autodetect">Autodetect</string>
    <string name="city_selector_label">City:</string>
    <string name="location_request_rationale">Allowing the app to use your phone\'s GPS location provider will allow us to autodetect your city to provide a localized heatwave prediction. If you do not wish to grant access to the GPS provider, deny the upcoming request and select your city manually from the dropdown in the app.</string>
    <string name="next">Next</string>
    <string name="gps_location_error">Error accessing GPS location</string>
    <string name="retry">Retry</string>
    <string name="ok">@android:string/ok</string>
    <string name="cancel">Cancel</string>
    <string name="gps_enable_user_request">Enable GPS location service to find current location.  Click OK to go to location services settings to let you do so.</string>
    <string name="enable_background_service">Enable background service</string>
    <string name="at_risk_message">AT RISK!</string>
    <string name="safe_message">Looks like you\'re safe</string>
    <string name="unexpected_server_response_message">Unexpected result from server</string>
    <string name="network_error">Network error</string>
    <string name="channel_name">Heatwave Alerts</string>
    <string name="channel_description">Alerts given out by the app in case a heatwave is expected in your area in the next few days</string>
    <string name="alert_title">Heatwave Alert!</string>
    <string name="alert_description_short">A heatwave is expected to occur in your area.</string>
    <string name="alert_description_long">A heatwave is expected to occur in your area today and the next few days. Please stay indoors, in a cool location to ensure your safety</string>
    <string name="enable_live_tracking">Enable heart rate tracking</string>
    <string name="check_button_onboarding_primary">Check for alerts</string>
    <string name="check_button_onboarding_secondary">Press \"Check\" to quickly check for a heatwave alert in your area</string>
    <string name="background_service_onboarding_primary">Enable background service</string>
    <string name="background_service_onboarding_secondary">Enable the app\'s background service to have the app automatically check for alerts in your area once a day and notify you of any new alerts</string>
    <string name="live_tracking_onboarding_primary">Enable live heart rate tracking</string>
    <string name="live_tracking_onboarding_secondary">Enable this checkbox to allow the app to continuously monitor your heart rate and notify you any anomalies due to heat exhaustion</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="services">Services</string>
    <string name="torrid">Torrid</string>
    <string name="torrid_services">Torrid Services</string>
    <string name="torrid_profile">Torrid Profile</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="update">Update</string>
    <string name="profile_picture">Profile picture</string>
    <string name="user_reg_message">To use app features such as live tracking and automatic SOS to hospitals, some user profile information is required. Please fill the user profile and press update to be able to use these features.</string>
    <string name="user_reg_prompt">User Registration Prompt</string>
    <string name="title_activity_scrolling_tips">ScrollingTipsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="what_to_do_during_a_heatwave">What to do during a heatwave</string>
    <string name="tip_1">Stay indoors and stay cool</string>
    <string name="tip_2">Use air conditioning</string>
    <string name="tip_3">Wear loose, lightly covered clothing.</string>
    <string name="tip_4">Stay well hydrated</string>
    <string name="tip_5">Make temporary window reflectors</string>
    <string name="tip_6">Cover windows that recieve morning and afternoon sun</string>
    <string name="courtesy_wikihow_com">Courtesy: wikihow.com</string>
</resources>
