<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:menu="@menu/home_toolbar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                android:text="@string/torrid"
                android:textColor="@color/common_google_signin_btn_text_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/riskTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_at_risk"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.button.MaterialButton
            android:id="@+id/info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="Tips"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:theme="@style/Widget.MaterialComponents.Button.OutlinedButton" />

        <Button
            android:id="@+id/check_button"
            android:layout_width="128dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="8dp"
            android:text="@string/check_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/riskTextView" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>